# backend

./: .flake8  .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml
.github/workflows/: notify-parent.yml
authentication/: admin.py  models.py  serializers.py  utils.py
authentication/api/: permissions.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role_invitecode.py  0003_alter_invitecode_created_by.py  0004_remove_invitecode_is_active_alter_user_first_name_and_more.py  0005_alter_user_last_name.py  0006_alter_user_middle_name.py  0007_alter_invitecode_role_alter_user_role.py
authentication/tests/: test_api.py
backend/: settings.py  urls.py
devices/: models.py
devices/migrations/: 0001_initial.py
middleware/: device_token.py
reagents/: admin.py  apps.py  models.py  serializer.py  services.py
reagents/api/: urls.py  views.py
reagents/migrations/: 0001_initial.py  0002_alter_container_container_id.py  0003_remove_container_cas_remove_container_volume_and_more.py
reagents/tests/: test_api.py
